fixed hover overlay on mobile +readme

--- a/assets/main.css
+++ b/assets/main.css
@@ -153,7 +153,7 @@ hr {
 
 .hero-headline {
     position: absolute;
-    top: 7%;
+    top: 10%;
     width: 75%;
     height: 200px;
     text-align: center;
@@ -690,7 +690,7 @@ footer input {
     }
 
     #hero {
-        height: 263px;
+        height: 265px;
     }
 
     .hero--thin {
@@ -713,6 +713,10 @@ footer input {
     .gallery-wrapper {
         grid-template-columns: 1fr;
         grid-auto-rows: unset;
+    }
+
+    .gallery-overlay {
+        opacity: 0.7;
     }
 
     /*About Page */
